# Calculator

./: LICENSE  README.md  index.html  package.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
