[package]
name = "calculator"
version = "1.0.0"
description = "Simple yet elegant desktop Calculator app."
authors = ["Albert Glebocki"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-create", "window-hide", "window-unmaximize", "window-show", "window-maximize", "window-minimize", "window-close", "window-unminimize", "window-start-dragging", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.26"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
